--- a/views/mail.hbs
+++ b/views/mail.hbs
@@ -11,9 +11,8 @@
       <tr class="{{#unless this.isRead}}table-primary{{/unless}}">
         <td title="{{this.from.emailAddress.address}}">{{this.from.emailAddress.name}}</td>
         <td>{{this.subject}}</td>
-        <td>{{opt this.receivedDateTime}}</td>
-
-        <td>{{this.body.content}}</td>
+        <td>{{this.receivedDateTime}}</td>
+        <td>{{#filter}}{{this.body.content}}{{/filter}}</td>
 
       </tr>
 
