--- a/views/mail.hbs
+++ b/views/mail.hbs
@@ -1,24 +1,17 @@
-<h2>Inbox</h2>
+<h2>Companies that have your data</h2>
 <table class="table">
   <thead class="thead-light">
-    <th scope="col">From</th>
-    <th scope="col">Subject</th>
+    <th scope="col">From Email</th>
+    <th scope="col">From Name</th>
     <th scope="col">Received</th>
-    <th scope="col">bodyPreview</th>
+
   </thead>
   <tbody>
+
     {{#each messages}}
       <tr class="{{#unless this.isRead}}table-primary{{/unless}}">
-        <td title="{{this.from.emailAddress.address}}">{{this.from.emailAddress.name}}</td>
-        <td>{{this.subject}}</td>
-        <td>{{this.receivedDateTime}}</td>
-        <td>{{#filter}}{{this.body.content}}{{/filter}}</td>
-
+        <td>{{this}}</td>
       </tr>
-
-
-      {{log this.subject}}
-
     {{/each}}
   </tbody>
 </table>
