--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,9 @@
           <li class="nav-item{{#if active.home}} active{{/if}}">
             <a class="nav-link" href="/">Home</a>
           </li>
+          <li class="nav-item{{#if active.contact}} active{{/if}}">
+            <a class="nav-link" href="/contact">Contact Us</a>
+          </li>
           {{#if user}}
             <li class="nav-item{{#if active.inbox}} active{{/if}}">
               <a class="nav-link" href="/mail">Inbox</a>
