--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
   {{#if user}}
     <p>Welcome {{user}}!</p>
   {{else}}
-    <a class="btn btn-primary btn-large" href="{{signInUrl}}">Login with hotmail</a>
-    <a class="btn btn-primary btn-large" href="/auth/google">Login with google</a>
+    <a class="btn btn-primary btn-large" href="{{hotmailSignInUrl}}">Login with hotmail</a>
+    <a class="btn btn-primary btn-large" href="{{googleSignInUrl}}">Login with google</a>
   {{/if}}
 </div>
