--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -49,7 +49,8 @@
             </li>
           {{else}}
             <li class="nav-item">
-              <a class="nav-link" href="{{signInUrl}}">Sign In</a>
+              <a class="nav-link" href="{{hotmailSignInUrl}}">Sign In With Hotmail</a>
+              <a class="nav-link" href="{{googleSignInUrl}}">Sign In With Google</a>
             </li>
           {{/if}}
         </ul>
