--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,5 @@
 <div class="jumbotron">
   <h1>Yo-Da</h1>
   <p class="lead">Take back control of your data</p>
-  {{#if user}}
-    <p>Welcome {{user}}!</p>
-  {{else}}
-    <a class="btn btn-primary btn-large" href="{{hotmailSignInUrl}}">Login with hotmail</a>
-    <a class="btn btn-primary btn-large" href="{{googleSignInUrl}}">Login with google</a>
-  {{/if}}
+  <p>Welcome LoggedIn User!</p>
 </div>
