--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,6 @@
     <p>Welcome {{user}}!</p>
   {{else}}
     <a class="btn btn-primary btn-large" href="{{signInUrl}}">Login with hotmail</a>
-    <a class="btn btn-primary btn-large" href="/authorize/google">Login with google</a>
+    <a class="btn btn-primary btn-large" href="/auth/google">Login with google</a>
   {{/if}}
 </div>
