--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <div class="jumbotron">
   <h1>Yo-Da</h1>
   <p class="lead">Take back control of your data</p>
-  {{#if user}}
-    <p>Welcome {{user}}!</p>
+  {{#if user | userGoogle}}
+    <p>Welcome {{userGoogle}}!</p>
   {{else}}
     <a class="btn btn-primary btn-large" href="{{signInUrl}}">Login with hotmail</a>
     <a class="btn btn-primary btn-large" href="/auth/google">Login with google</a>
